# flow

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.md  flowConfig.cmake.in  package.xml
cmake/: install_ros_macros.cmake
cmake/templates/: UploadPPA.cmake  flow-config.cmake.in
examples/: CMakeLists.txt  simple_example.cpp  visual_example.cpp
include/flow/: Block.h  DataFlow.h  OutPipe.h  Outpipe.h  Persistency.h  Policy.h  ThreadPool.h  flow.h
include/flow/visual/: FlowVisualInterface.h  Slam4KidsManager.h
include/flow/visual/blocks/: FlowVisualBlock.h  FlowVisualBlock.inl  MicoFlowBlock.h  ParameterWidget.h
include/flow/visual/blocks/plugins/: BlockPlugin.h
include/flow/visual/blocks/publishers/fastcom/: BlockFastcomPublisher.h
include/flow/visual/blocks/publishers/ros/: BlockROSPublisher.h  ROSPublishers.h
include/flow/visual/blocks/streamers/fastcom/: BlockFastcomSubscriber.h
include/flow/visual/blocks/streamers/ros/: BlockROSSubscriber.h  BlockROSSuscriber.h  ROSStreamers.h  ROSSubscribers.h
include/flow/visual/code_generation/: CodeGenerator.h
include/flow/visual/data_types/: StreamerPipeInfo.h
scripts/: install_dependencies.sh  install_dependencies_ci.sh
src/: Block.cpp  DataFlow.cpp  OutPipe.cpp  Outpipe.cpp  Policy.cpp  ThreadPool.cpp  block.cpp
src/visual/: FlowVisualInterface.cpp  Slam4KidsManager.cpp
src/visual/blocks/: ParameterWidget.cpp
src/visual/blocks/publishers/ros/: ROSPublishers.cpp
src/visual/blocks/streamers/ros/: ROSStreamers.cpp  ROSSubscribers.cpp
src/visual/code_generation/: CodeGenerator.cpp
tests/: CMakeLists.txt  policy_stream.cpp  ros_sub_pub.cpp
tools/: CMakeLists.txt  flow_kids.cpp  speed_test.cpp
tools/block_creator/include/block_creator/: BlockCreatorWindow.h  BlockTemplate.h  CallbackConfigWidget.h  TemplateSource.h
tools/block_creator/src/: BlockCreatorWindow.cpp  BlockTemplate.cpp  CallbackConfigWidget.cpp
